// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Kusto Example renders the Azure Kusto Example and checks snapshot 1`] = `
"{
  "output": {
    "Kusto_data_ingestion_uri": {
      "value": "\${azurerm_kusto_cluster.kusto_Kusto_6B093AC5.data_ingestion_uri}"
    },
    "Kusto_id": {
      "value": "\${azurerm_kusto_cluster.kusto_Kusto_6B093AC5.id}"
    },
    "Kusto_identity": {
      "sensitive": true,
      "value": "\${azurerm_kusto_cluster.kusto_Kusto_6B093AC5.identity[0]}"
    },
    "Kusto_uri": {
      "value": "\${azurerm_kusto_cluster.kusto_Kusto_6B093AC5.uri}"
    },
    "id": {
      "value": "\${azurerm_resource_group.rg_1429A41A.id}"
    },
    "location": {
      "value": "\${azurerm_resource_group.rg_1429A41A.location}"
    },
    "name": {
      "value": "\${azurerm_resource_group.rg_1429A41A.name}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
          "resource_group": {
            "prevent_deletion_if_contains_resources": false
          }
        }
      }
    ]
  },
  "resource": {
    "azurerm_kusto_cluster": {
      "kusto_Kusto_6B093AC5": {
        "auto_stop_enabled": true,
        "identity": {
          "identity_ids": [
          ],
          "type": "SystemAssigned"
        },
        "location": "\${azurerm_resource_group.rg_1429A41A.location}",
        "name": "kusto\${var.name}",
        "public_network_access_enabled": true,
        "purge_enabled": false,
        "resource_group_name": "\${azurerm_resource_group.rg_1429A41A.name}",
        "sku": {
          "capacity": 2,
          "name": "Dev(No SLA)_Standard_D11_v2"
        },
        "streaming_ingestion_enabled": true,
        "zones": [
          "1",
          "2",
          "3"
        ]
      }
    },
    "azurerm_resource_group": {
      "rg_1429A41A": {
        "lifecycle": [
          {
            "ignore_changes": [
            ]
          }
        ],
        "location": "eastus",
        "name": "rg-\${var.name}"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.75.0"
      }
    }
  },
  "variable": {
    "name": {
      "default": "test",
      "description": "System name used to randomize the resources",
      "type": "string"
    }
  }
}"
`;

exports[`Kusto With Defaults renders an Kusto with defaults and checks snapshot 1`] = `
"{
  "output": {
    "Kusto_data_ingestion_uri": {
      "value": "\${azurerm_kusto_cluster.testAzureKustoDefaults_Kusto_4306B42C.data_ingestion_uri}"
    },
    "Kusto_id": {
      "value": "\${azurerm_kusto_cluster.testAzureKustoDefaults_Kusto_4306B42C.id}"
    },
    "Kusto_identity": {
      "sensitive": true,
      "value": "\${azurerm_kusto_cluster.testAzureKustoDefaults_Kusto_4306B42C.identity[0]}"
    },
    "Kusto_uri": {
      "value": "\${azurerm_kusto_cluster.testAzureKustoDefaults_Kusto_4306B42C.uri}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_kusto_cluster": {
      "testAzureKustoDefaults_Kusto_4306B42C": {
        "auto_stop_enabled": true,
        "identity": {
          "identity_ids": [
          ],
          "type": "SystemAssigned"
        },
        "location": "eastus",
        "name": "kustotest",
        "public_network_access_enabled": true,
        "purge_enabled": false,
        "resource_group_name": "testrgname",
        "sku": {
          "capacity": 2,
          "name": "Dev(No SLA)_Standard_D11_v2"
        },
        "streaming_ingestion_enabled": true,
        "zones": [
          "1",
          "2",
          "3"
        ]
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.75.0"
      }
    }
  }
}"
`;
